# tweers-splitter

./: .gitmodules  package.json  pnpm-lock.yaml
.github/workflows/: build.yml
src/: App.css  App.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  main.rs  serialize.rs
src/components/: FlowCanvas.tsx  GroupCard.tsx  GroupPanel.tsx  PassageList.tsx  PassagePreview.tsx  Toolbar.tsx
src/hooks/: usePassages.ts  useSplitGroups.ts
src/utils/: autoGroup.ts  autoLayout.ts  parseLinks.ts
